fix: Remove scrollbar from day div

--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
 .day {
   display: inline-block;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  overflow: scroll;
+  overflow: auto;
 }
 
 .row {
